--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         <tbody>
           <tr *ngFor="let data of user">
             <td>{{data.id}}</td>
-            <td>{{data.employeeName}}</td>
+            <td>{{data.name}}</td>
             <td>{{data.comment}}</td>
             <td>{{data.salary}}</td>
             <td>
