--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,64 @@
-<div class="content">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" style="margin-left: 50%;margin-top: 2%">
-     addEmployee
-     </button>
-<table class="table table-dark table-striped">
-        <thead>
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">employeeName</th>
-            <th scope="col">comment</th>
-            <th scope="col">salary</th>
-            <th scope="col">action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let data of user">
-            <td>{{data.id}}</td>
-            <td>{{data.name}}</td>
-            <td>{{data.comment}}</td>
-            <td>{{data.salary}}</td>
-            <td>
-            <button data-toggle="modal" data-target="#exampleModal" (click)="editData(data)"><i class="fas fa-edit" style="color:rgb(46, 46, 22)" ></i></button>
-          
-            &nbsp;
-            <button (click)="deleteEmployee(data)"><i class="far fa-trash-alt" style="color:red" ></i></button>
-        </td>
-          </tr>
-        </tbody>
-     
-  </table>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="modal" style="margin-left: 50%;margin-top: 2%">
+    addEmployee
+    </button>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="Id">
+      <th mat-header-cell *matHeaderCellDef> id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="userId">
+      <th mat-header-cell *matHeaderCellDef> userId </th>
+      <td mat-cell *matCellDef="let element"> {{element.userid}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="Msg">
+      <th mat-header-cell *matHeaderCellDef>title</th>
+      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Title">
+      <th mat-header-cell *matHeaderCellDef>msg  </th>
+      <td mat-cell *matCellDef="let element"> {{element.msg}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <ng-container matColumnDef="action">
+        <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
+        <mat-cell data-label="Action" *matCellDef="let element">
+            <button title="Revise quote" mat-icon-button (click)="edit(element)">
+                <mat-icon>edit</mat-icon>
+            </button>
+            <button  mat-icon-button (click)="delete(element)">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </mat-cell>
+    </ng-container>
+   
+  </table>
+ 
+  
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">add Empolyee</h5>
+          <h5 class="modal-title" id="exampleModalLabel">addEmployee</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
+
+
         <div class="modal-body">
           <form  [formGroup]="myForm" >
             <div class="row">
@@ -46,23 +66,24 @@
                 <input type="text" class="form-control" placeholder="id" formControlName="id">
               </div>
               <div class="col-4">
-                <input type="text" class="form-control" placeholder="Name"formControlName="name">
+                <input type="text" class="form-control" placeholder="userId"formControlName="userid">
               </div>
               <div class="col-4">
-                <input type="text" class="form-control" placeholder="comment"formControlName="comment">
+                <input type="text" class="form-control" placeholder="msg"formControlName="msg">
               </div>
               <div class="col-4">
-                <input type="text-area" class="form-control" placeholder="salary"formControlName="salary">
+                <input type="text-area" class="form-control" placeholder="title"formControlName="title">
               </div>
             </div>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" (click)=" postEmployee()">Save changes</button>
-          <button type="button" class="btn btn-primary" (click)=" updatemployee()">update</button>
+          <button type="button" class="btn btn-primary" (click)=" postData()">Save changes</button>
+          <button type="button" class="btn btn-primary" (click)=" updateData()">update</button>
          
         </div>
       </div>
     </div>
   </div>
+  
