--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,25 @@
-.table-dark{
-   
-    margin-top: 5%;
-    width: 90%;
-    margin-left: 5%;
-}
+.demo-table {
+    width: 100%;
+  }
+  
+  .mat-column-demo-position {
+    width: 32px;
+    border-right: 1px solid currentColor;
+    padding-right: 24px;
+    text-align: center;
+  }
+  
+  .mat-column-demo-name {
+    padding-left: 16px;
+    font-size: 20px;
+  }
+  
+  .mat-column-demo-weight {
+    font-style: italic;
+  }
+  
+  .mat-column-demo-symbol {
+    width: 32px;
+    text-align: center;
+    font-weight: bold;
+  }
